--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
         <input id="player2" type="text" placeholder="Player2" />
         <button id="start">Start</button>
     </div>
+
+    <div id="gameContainer">
+
+    </div>
     
     <script src="ball.js"></script>
     <script src="start-game.js"></script>
